<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- 메인 -->
    <string name="app_name">중앙고</string>
    <string name="beta">베타</string>
    <string name="blank"></string>
    <string name="com.crashlytics.useFirebaseAppId" tools:ignore="ExtraTranslation">true</string>

    <string name="activity_main_fragment_simpleview">모아 보기</string>
    <string name="activity_main_fragment_notice">알림</string>
    <string name="activity_main_fragment_schoolinfo">교내 정보</string>
    <!-- 기본 -->
    <string name="loading_title">불러오는 중\n잠시 기다려주세요.</string>
    <string name="Unknown_error_title">알 수 없는 오류 발생</string>
    <string name="Unknown_error_message">오류가 발생하였습니다.</string>
    <string name="meal_error_title">점검 중</string>
    <string name="meal_error_message">현재 "급식 조회 서비스"가 점검중입니다.\n나중에 다시 시도해 주십시오.</string>
    <!-- 메뉴 -->
    <string name="action_settings">설정</string>
    <string name="action_feedback">피드백 / 의견</string>
    <string name="action_refresh">새로고침</string>
    <string name="action_calender">날짜 설정</string>
    <string name="action_today">오늘 날짜</string>
    <string name="action_reset_mygrade">학급 정보 재설정</string>
    <string name="action_share_timetable">시간표 공유하기</string>
    <string name="action_share_timetable_msg">%1$s 시간표
\n%2$s</string>
    <string name="action_setting_mygrade">학년 설정</string>
    <string name="action_setting_myclass">반 설정</string>
    <string name="action_setting_mytype">계열 설정</string>
    <string name="action_share_day">공유할 요일 선택</string>
    <string name="action_download_db">DB 업데이트</string>
    <!-- 급식 -->
    <string name="title_activity_bap">급식</string>
    <string name="message_activity_bap">급식을 확인합니다.</string>
    <string name="today_lunch">오늘의 중식</string>
    <string name="today_dinner">오늘의 석식</string>
    <string name="no_data_lunch">중식이 없습니다.</string>
    <string name="no_data_dinner">석식이 없습니다.</string>
    <string name="no_data_title">정보 없음</string>
    <string name="no_data_message">정보가 없습니다.</string>
    <string name="no_network_title">네트워크 연결 안됨</string>
    <string name="no_network_msg">네트워크에 연결되어있지 않기 때문에 데이터를 다운로드 할 수 없습니다.</string>
    <string name="shareBap_title">급식 공유하기</string>
    <string name="shareBap_message_msg">%1$s의 급식 목록
\n\n중식 : %2$s
\n\n석식 : %3$s</string>
    <!-- 시간표 -->
    <string name="title_activity_time_table">시간표</string>
    <string name="message_activity_time_table">시간표를 확인합니다.</string>
    <string name="today_timetable">%1$s 시간표</string>
    <string name="no_setting_my_grade">학급 정보가 없습니다.</string>
    <string name="not_go_to_school_title">시간표 없음</string>
    <string name="not_go_to_school_message">오늘은 시간표가 없습니다.</string>
    <string name="not_exists_data">데이터가 없습니다.</string>
    <string name="timetable_subtitle">%1$d학년 %2$d반</string>
    <string name="no_time_table_db_title">시간표 DB 없음</string>
    <string name="no_time_table_db_message">시간표 DB가 없습니다. 다운로드 하시겠습니까?</string>
    <!-- 설정 -->
    <string name="title_activity_settings">설정</string>
    <!-- 일정 -->
    <string name="title_activity_schedule">일정</string>
    <string name="message_activity_schedule">학사일정을 확인합니다.</string>
    <!-- 행사 -->
    <string name="title_activity_festival">행사</string>
    <string name="message_activity_festival">교내대회 및 체육대회, 행사일정을 확인합니다.</string>
    <!-- 연락처 -->
    <string name="title_activity_tel">연락처</string>
    <string name="message_activity_tel">학교 연락망을 확인합니다.</string>
    <!-- 급식 자동 업데이트 -->
    <string name="title_service_autoupdate">자동 업데이트 서비스</string>
    <string name="title_broadcast_autoupdate">자동 업데이트 리시버</string>
    <!-- 급식 자동 업데이트 안내 -->
    <string name="info_autoUpdate_title">급식 자동 업데이트 안내</string>
    <string name="info_autoUpdate_msg">급식 자동 업데이트는 매주 사용자분께서 급식을 업데이트 해야하는 불편을 덜기위해 만들어졌습니다.
\n
\n- 업데이트 주기: 자동, 토요일, 일요일을 선택할 수 있습니다. 선택한 날짜의 AM 1:00에 업데이트가 이루어집니다.
\n- 업데이트 알림: 급식 업데이트 중에는 설정과 관계없이 진행중 알림이 나타나며 업데이트 완료후 성공/실패여부를 알림으로 나타내줍니다.
\n- Wi-Fi로만 업데이트: Wi-Fi에서만 업데이트 합니다. 데이터가 부족한 학생을 위한 기능입니다. (그런데 급식 가져오는거 데이터 얼마 안들어요.)
\n
\n어플을 사용하시다가 강제종료가 발생하면 꼭 "보고(신고)" 버튼을 눌러 신고해 주세요!</string>
    <!-- 급식 자동 업데이트 알림 -->
    <string name="bapUpdateNotification_title">급식 업데이트</string>
    <string name="bapUpdateNotification_ticker">급식 업데이트 중</string>
    <string name="bapUpdateNotification_notification">급식 업데이트 알림</string>
    <string name="bapUpdateNotification_msg">급식을 업데이트하고 있습니다. 잠시만 기다려주세요.</string>
    <string name="bapUpdate_Error_Net_title">네트워크 연결 안됨</string>
    <string name="bapUpdate_Error_Net_msg">인터넷에 접속할 수 없습니다.</string>
    <string name="bapUpdate_Error_get_title">급식 데이터 수신 실패</string>
    <string name="bapUpdate_Error_get_msg">급식 데이터를 가져올 수 없습니다.</string>
    <string name="bapUpdate_Success_title">급식 업데이트 성공</string>
    <string name="bapUpdate_Success_msg">급식을 성공적으로 업데이트 했습니다. 확인하려면 누르세요.</string>
    <!-- 위젯 -->
    <string name="widget_bap_name">중앙고 급식 위젯</string>
    <string name="widget_timetable_name">중앙고 시간표 위젯</string>
    <string name="widget_no_data">데이터가 없습니다. 날짜를 눌러 새로고침 하세요.</string>
    <!-- 개발자 -->
	<string name="developer_title">개발자</string>
	<string name="developer_msg">
\n지성민
\nThanks to Mir</string>
    <!-- 업데이트 -->
    <string name="offline">네트워크가 연결되지 않았습니다.
        \n업데이트 확인을 위해 네트워크를 연결하여 주십시오.</string>
    <string name="low_version">새 업데이트가 있습니다</string>
    <string name="plz_update">Play 스토어에서 앱을 업데이트 할 것을 권장합니다.
\n
\n[ ! ] 업데이트를 하지 않을 경우, 버그 수정 및 핫픽스, 새로운 기능 등을 사용하실 수 없으며,
\n앱이 정상적으로 구동되지 않을 수 있습니다.
\n
\n[ Tip ] 업데이트를 요구하는 창이 뜨나, 최신버전으로 나오는 경우, 나중에 다시시도해 주십시오.</string>
    <string name="crack_contents">테스트 빌드이므로\n여러 버그가 있을 수 있습니다.ツ</string>
    <string name="later">나중에</string>
    <string name="update_now">지금 업데이트</string>
    <string name="title_activity_notice">공지사항</string>
    <string name="message_activity_notice">앱 개발자의 공지사항을 확인합니다.</string>
    <string name="title_notice">공지사항</string>
    <string name="title_activity_changelog">변경사항</string>
    <string name="message_activity_changelog">앱 변경사항을 확인합니다.</string>
	<string name="title_activity_changelog_beta">[베타] 변경사항</string>
    <!-- 관리자 (미사용) -->
    <string name="user_info_require_message">게시글 작성을 위해서 관리자 권한이 필요합니다.</string>
    <!-- 공지사항 -->
	<string name="title_activity_scnotice">학생회 공지사항</string>
    <string name="message_activity_scnotice">학생회 공지사항을 확인합니다.</string>
    <string name="subtitle_activity_scnotice">학생회</string>
    <string name="title_activity_notice_send">공지사항 게시</string>
    <string name="post_notice_title">공지사항 전송</string>
    <string name="post_notice_alert">한번 게시된 공지사항은 앱 개발자만 삭제할 수 있습니다. 다시 한 번 확인하시고 전송하십시오.
\n반영까지 약 5분정도 소요될 수 있습니다.</string>
    <string name="post_notice_posting">공지사항을 전송중입니다.</string>
    <string name="post_notice_success">공지사항 전송을 성공했습니다!</string>
    <string name="post_notice_failed">공지사항 전송에 실패했습니다!</string>
    <!-- 급식 평점 -->
    <!-- 시험 시간표 -->
    <string name="title_activity_exam_range">시험 시간표</string>
    <string name="message_activity_exam_range">시험 시간표를 확인합니다.</string>
    <string name="exam_time_title">%1$s %2$s</string><!-- 2학기 기말 시간표 -->
    <string name="exam_time_subtitle">%1$d학년 %2$s</string><!-- 1학년 과중 -->
    <string name="no_exam_db_title">시험 시간표 DB 없음</string>
    <string name="no_exam_db_message">시험 시간표 DB가 없습니다. 다운로드 하시겠습니까?</string>
    <!-- App Shortcut -->
    <string name="rice_shortcut_long_label">오늘의 급식</string>
    <string name="rice_shortcut_short_label">오늘의 급식</string>
    <string name="rice_disabled_message">오늘의 급식 비활성화</string>
    <string name="timetable_shortcut_long_label">오늘의 시간표</string>
    <string name="timetable_shortcut_short_label">오늘의 시간표</string>
    <string name="timetable_disabled_message">오늘의 시간표 비활성화</string>
    <string name="schedule_shortcut_long_label">이달의 일정</string>
    <string name="schedule_shortcut_short_label">이달의 일정</string>
    <string name="schedule_disabled_message">이달의 일정 비활성화</string>
    <string name="festival_shortcut_long_label">행사일정</string>
    <string name="festival_shortcut_short_label">행사일정</string>
    <string name="festival_disabled_message">행사일정 비활성화</string>
    <!-- 변경사항 -->
</resources>